# spyglass

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: FUNDING.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/middleware/: api_token.py  cookie_session.py  cors.py  logging.py  rate_limit.py  request_id.py  security_headers.py  trusted_proxy.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: devices.py  health.py  info.py  myip.py  query.py  stream.py  ws_query.py
backend/app/api/v1/schemas/: common.py  device.py  query.py
backend/app/core/: cache.py  constants.py  exceptions.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  acl.py  device.py  query_log.py
backend/app/services/: acl_checker.py  command_builder.py  device_connector.py  dns_resolver.py  local_executor.py  output_parser.py  query_executor.py  validators.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_security/: test_acl.py  test_forwarded_for.py  test_input_sanitization.py  test_rate_limiting.py
backend/tests/test_services/: test_command_builder.py  test_output_parser.py  test_validators.py
config/: acl.yaml  commands.yaml  devices.yaml  devices.yaml.example
docs/: API.md  DEPLOYMENT.md  RATE_LIMITING.md  SECURITY.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+44 files in other folders)
